Fix layout issues

--- a/style.css
+++ b/style.css
@@ -12,9 +12,8 @@ body, html{
 /* Layout */
 section {
   width: 100%;
-  /*min-height: 100%;*/
-  position: relative;
-  padding-bottom: 100px;
+  margin: 0;
+  padding: 0;
 }
 
 
@@ -30,7 +29,7 @@ section {
   font-family: HelveticaNeue-Bold;
   font-size: 32px;
   line-height: 1.1;
-  letter-spacing: -2px;
+  letter-spacing: -1px;
   font-weight: 100;
 }
 
@@ -52,6 +51,7 @@ h5 {
 }
 
 .content {
+
   font-family: HelveticaNeue;
   font-size: 18px;
   line-height: 1.5;
@@ -61,6 +61,15 @@ h5 {
   width: 700px;
   margin: 0 auto 0 auto;
   text-align: center;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+
+  overflow: hidden;
+}
+
+.center-xy {
+  margin: 0 auto 0 auto;
   position: relative;
   top: 50%;
   transform: translateY(-50%);
@@ -108,16 +117,34 @@ h5 {
 
 
 .bli-med {
-  height: 569px;
+  height: 800px;
 }
 
 .bli-med .content {
+  width: 900px;
   color: #000;
 }
 
-.vi-er-stotle-av {
+.vi-er-stolte-av {
   height: 632px;
   background-color: #0097a2;
+}
+
+.vi-er-stolte-align {
+  padding-top: 80px;
+}
+
+.vi-er-stolte-av .content {
+  text-align: left;
+  width: 800px;
+}
+
+.vi-er-stolte-av .box {
+  width: 470px;
+}
+
+.vipps {
+  text-align: right;
 }
 
 .flinke-folk {
@@ -142,9 +169,9 @@ h5 {
 }
 
 .folk-content {
-  margin-top: 150px;
   margin-left: 431px;
   padding-left: 20px;
+  padding-top: 150px;
 }
 
 .folk-selection .userpic {
@@ -179,7 +206,7 @@ h5 {
 }
 
 .fa-facebook {
-  margin: 7px 0px 0px 12px;
+  margin: 7px 0px 0px 11px;
 }
 
 .fa-twitter {
@@ -258,9 +285,6 @@ h5 {
   margin: 0 auto 0 auto;
 }
 
-.center-box {
-}
-
 .overlay {
   height: 823px;
   opacity: 0.9;
@@ -301,9 +325,13 @@ td, th {
 }
 
 .round-button a {
+  border-radius: 40px;
+  overflow: hidden;
+  margin: 0 auto 0 auto;
+
   display:block;
-  height: 50px;
-  margin-top: 20px;
+  height: 60px;
+  padding-top: 16px;
 
   font-family: HelveticaNeue-Bold;
   text-align:center;
@@ -312,21 +340,18 @@ td, th {
   text-decoration:none;
 }
 
-
 .carousel-control.left, .carousel-control.right {
   background-image: none;
   color: #000;
-}
-
-/* Since positioning the image, we need to help out the caption */
-.carousel-caption {
-  z-index: 10;
 }
 
 .carousel-control {
     background-image: none
 }
 
+.vspace-top-small {
+  margin-top: 50px;
+}
 
 @media (min-width: 700px) {
 
